force-app/main/default/objects/StockNotificationRequest__c/StockNotificationRequest__c.object-meta.xml
<CustomObject>
    <label>Stock Notification Request</label>
    <nameField>
        <displayFormat>SNR-{00000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Notification Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>