force-app/main/default/objects/StockNotificationRequest__c/fields/CustomerEmail__c.field-meta.xml
<CustomField>
    <fullName>CustomerEmail__c</fullName>
    <label>Customer Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>