force-app/main/default/objects/StockNotificationRequest__c/fields/NotifiedDate__c.field-meta.xml
<CustomField>
    <fullName>NotifiedDate__c</fullName>
    <label>Notified Date</label>
    <type>DateTime</type>
</CustomField>